# cors_misconfig_finder

./: .gitignore  Cargo.toml  README.md
src/: main.rs
