[package]
name = "cors_misconf_finder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.6.0"
clap = "4.5.4"
colored = "2.1.0"
percent-encoding = "2.3.1"
regex = "1.10.4"
reqwest = { version = "0.12.4", features = ["json"] }
tokio = { version = "1.37.0", features = ["full"] }
url = "2.5.0"
